fix issues with alignment in authentication components

--- a/src/components/authenticate/SignUp/SignUp.scss
+++ b/src/components/authenticate/SignUp/SignUp.scss
@@ -20,9 +20,9 @@
 
   .input-spinner,
   .uk-spinner,
-  .fa-check {
-    position: relative;
-    top: -40px;
+  .fa-check.signup-check {
+    position: absolute;
+    top: 45px;
     left: -30px;
     width: 20px;
   }
